# arxiv-digest-bots

./: .env.example  README.md  pyproject.toml
.github/workflows/: daily-digest.yml
bots/: cv_engineer.yaml  data_engineer.yaml  data_scientist.yaml  genai_engineer.yaml  ml_engineer.yaml
src/: arxiv_client.py  config.py  main.py  summarizer.py  telegram_notifier.py
