[project]
name = "arxiv-ai-digest"
version = "0.1.0"
description = "Daily ArXiv paper digests for data professionals, powered by Claude Haiku"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "feedparser>=6.0",
    "pyyaml>=6.0",
]

[project.scripts]
arxiv-digest = "src.main:main"
